// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-input should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _accessKey="V" 1`] = `
<kol-input _name="field" _placeholder="Hier steht ein Platzhaltertext" class="kol-input">
  <!---->
  <label class="input-label" id="undefined-label">
    <span class="input-label-span"></span>
  </label>
  <div class="input">
    <div class="input-slot" id="input"></div>
  </div>
</kol-input>
`;

exports[`kol-input should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _alert=true 1`] = `
<kol-input _name="field" _placeholder="Hier steht ein Platzhaltertext" class="kol-input">
  <!---->
  <label class="input-label" id="undefined-label">
    <span class="input-label-span"></span>
  </label>
  <div class="input">
    <div class="input-slot" id="input"></div>
  </div>
</kol-input>
`;

exports[`kol-input should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _disabled=true 1`] = `
<kol-input _name="field" _placeholder="Hier steht ein Platzhaltertext" class="disabled kol-input">
  <!---->
  <label class="input-label" id="undefined-label">
    <span class="input-label-span"></span>
  </label>
  <div class="input">
    <div class="input-slot" id="input"></div>
  </div>
</kol-input>
`;

exports[`kol-input should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _hint="Hint" 1`] = `
<kol-input _name="field" _placeholder="Hier steht ein Platzhaltertext" class="kol-input">
  <!---->
  <label class="input-label" id="undefined-label">
    <span class="input-label-span"></span>
  </label>
  <span class="hint" id="undefined-hint">
    Hint
  </span>
  <div class="input">
    <div class="input-slot" id="input"></div>
  </div>
</kol-input>
`;

exports[`kol-input should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input _name="field" _placeholder="Hier steht ein Platzhaltertext" class="kol-input">
  <!---->
  <label class="input-label" id="undefined-label">
    <span class="input-label-span"></span>
  </label>
  <div class="icon-left icon-right input">
    <kol-icon _icons="codicon codicon-arrow-left" _label=""></kol-icon>
    <div class="input-slot" id="input"></div>
    <kol-icon _icons="codicon codicon-arrow-right" _label=""></kol-icon>
  </div>
</kol-input>
`;

exports[`kol-input should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input _name="field" _placeholder="Hier steht ein Platzhaltertext" class="kol-input">
  <!---->
  <label class="input-label" id="undefined-label">
    <span class="input-label-span"></span>
  </label>
  <div class="icon-left input">
    <kol-icon _icons="codicon codicon-arrow-left" _label=""></kol-icon>
    <div class="input-slot" id="input"></div>
  </div>
</kol-input>
`;

exports[`kol-input should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input _name="field" _placeholder="Hier steht ein Platzhaltertext" class="kol-input">
  <!---->
  <label class="input-label" id="undefined-label">
    <span class="input-label-span"></span>
  </label>
  <div class="icon-right input">
    <div class="input-slot" id="input"></div>
    <kol-icon _icons="codicon codicon-arrow-right" _label=""></kol-icon>
  </div>
</kol-input>
`;

exports[`kol-input should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-input _name="field" _placeholder="Hier steht ein Platzhaltertext" class="hidden-error kol-input">
  <!---->
  <label class="input-label" id="undefined-label">
    <span class="input-label-span"></span>
  </label>
  <div class="input">
    <div class="input-slot" id="input"></div>
  </div>
</kol-input>
`;

exports[`kol-input should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input _name="field" _placeholder="Hier steht ein Platzhaltertext" class="kol-input">
  <!---->
  <label class="input-label" id="undefined-label">
    <span class="input-label-span"></span>
  </label>
  <div class="input">
    <div class="input-slot" id="input"></div>
  </div>
</kol-input>
`;

exports[`kol-input should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _readOnly=true 1`] = `
<kol-input _name="field" _placeholder="Hier steht ein Platzhaltertext" class="kol-input read-only">
  <!---->
  <label class="input-label" id="undefined-label">
    <span class="input-label-span"></span>
  </label>
  <div class="input">
    <div class="input-slot" id="input"></div>
  </div>
</kol-input>
`;

exports[`kol-input should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _shortKey="S" 1`] = `
<kol-input _name="field" _placeholder="Hier steht ein Platzhaltertext" class="kol-input">
  <!---->
  <label class="input-label" id="undefined-label">
    <span class="input-label-span"></span>
  </label>
  <div class="input">
    <div class="input-slot" id="input"></div>
  </div>
</kol-input>
`;

exports[`kol-input should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _smartButton={"_icons":["codicon codicon-eye"],"_hideLabel":true,"_label":"einblenden"} 1`] = `
<kol-input _name="field" _placeholder="Hier steht ein Platzhaltertext" class="kol-input">
  <!---->
  <label class="input-label" id="undefined-label">
    <span class="input-label-span"></span>
  </label>
  <div class="input">
    <div class="input-slot" id="input"></div>
    <kol-button-wc _hidelabel="" _label="einblenden"></kol-button-wc>
  </div>
</kol-input>
`;

exports[`kol-input should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _touched=true 1`] = `
<kol-input _name="field" _placeholder="Hier steht ein Platzhaltertext" class="kol-input touched">
  <!---->
  <label class="input-label" id="undefined-label">
    <span class="input-label-span"></span>
  </label>
  <div class="input">
    <div class="input-slot" id="input"></div>
  </div>
</kol-input>
`;

exports[`kol-input should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" 1`] = `
<kol-input _name="field" _placeholder="Hier steht ein Platzhaltertext" class="kol-input">
  <!---->
  <label class="input-label" id="undefined-label">
    <span class="input-label-span"></span>
  </label>
  <div class="input">
    <div class="input-slot" id="input"></div>
  </div>
</kol-input>
`;
